# sdp.wildberries

./: .gitignore  Cargo.toml  README.md  key.pub
api/: Cargo.toml
app/: Cargo.toml
app/assets/images/: logo.raw  logo.rev
app/src/: icons.rs  layout.rs  main.rs  settings.rs
app/src/layout/: icons.rs  mod.rs
app/src/layout/themes/: light.rs  mod.rs
app/src/layout/views/: auth.rs  main.rs  mod.rs  splash.rs
app/src/logic/: activation.rs  misc.rs  mod.rs  models.rs  task.rs  validator.rs
app/src/themes/: light.rs  mod.rs
app/src/views/: auth.rs  mod.rs  splash.rs
app/src/views/tabs/: accounts.rs  add_tasks.rs  home.rs  mod.rs  proxy.rs  settings.rs  tasks.rs
