[package]
name = "api"
description = "This crate provides an API for SDP (Sellars Desktop Platform)"
version = "0.0.0"
authors = ["very1fake <very1fake.coder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

